# uring_exec

./: CMakeLists.txt  README.md  conanfile.py
benchmarks/: ping.cpp  ping_when_any.cpp  pong.cpp
cmake/: uring_execConfig.cmake.in
examples/: echo_sender.cpp
include/uring_exec/: io_uring_exec_internal.h  io_uring_exec_sender.h
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
